--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+$primary-color: #FF6060;
+$font-montserrat: 'Montserrat', sans-serif;
+
+@mixin flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin text-style($size, $color, $weight) {
+  font-family: $font-montserrat;
+  font-size: $size;
+  color: $color;
+  font-weight: $weight;
+}
 
 .App {
   text-align: center;
@@ -8,16 +23,14 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  @media (prefers-reduced-motion: no-preference) {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
 .App-header {
-  padding:10px 50px 10px 50px;
+  padding: 10px 50px;
   background-color: #fff;
   min-height: 10vh;
   display: flex;
@@ -28,7 +41,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: $primary-color;
 }
 
 @keyframes App-logo-spin {
@@ -40,151 +53,143 @@
   }
 }
 
-.logo-main{
-  width:120px;
+.logo-main {
+  width: 120px;
   height: auto;
+  margin-top: 10px;
+  padding: 15px 0;
 }
 
-nav ul li{
+nav ul li {
   display: inline;
 }
 
-.nav-links li{
-font-size:20px;
-padding:0px 10px 0px 10px;
-font-family: 'Montserrat';
-color:#FF6060;
+.nav-links li {
+  font-size: 20px;
+  padding: 0px 10px;
+  font-family: $font-montserrat;
+  color: $primary-color;
 }
 
-.imageBelow{
-  border-radius:15px;
-  width:100%;
+.imageBelow {
+  border-radius: 15px;
+  width: 100%;
   object-fit: cover;
-  object-position: 50% 52%; /* even if we dont declare this the image will still be centered */
-
-
+  object-position: 50% 52%;
+  height: 250Px;
+  border-radius: 25px;
 }
 
 .containImageBelow {
   position: relative;
-  padding:10px 50px 10px 50px;
+  padding: 0 50px;
 }
 
 .imageContainer {
   position: relative;
   display: inline-block;
-  width:100%;
-  margin-top:10px
+  width: 100%;
 }
 
 .overlay {
+  @include flex-center;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 99%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex; 
-  align-items: center; 
-  justify-content: center;
-  border-radius:15px;
-
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 25px;
 }
 
 .overlayText {
-  color: white;
-  font-size: 20px;
-  font-weight: 300;
-  text-align: center;padding:0px
-
-}
-
-.overlayText h1{
-  font-weight:500;
-  font-family: 'Montserrat';
-
-
-}
-
-
-footer{
-  background-color:#000;
-  padding:40px 30px 40px 30px;
-  margin-top:30px;
+  @include text-style(25px, white, 300);
   text-align: center;
-  display: flex; /* Utilisation de flexbox */
-  justify-content: center; /* Centrer horizontalement le contenu */
-  align-items: center; /* Centrer verticalement le contenu */
-  flex-direction: column; /* Afficher les éléments en colonne */
-  gap:25px;
-  
+  padding: 0;
+
+  h1 {
+    font-weight: 500;
+    font-family: $font-montserrat;
   }
-  
-  .imageFooter{
-    width:8%;
+}
+
+footer {
+  background-color: #000;
+  padding: 40px 30px;
+  margin-top: 30px;
+  @include flex-center;
+  flex-direction: column;
+  gap: 25px;
+
+  .imageFooter {
+    width: 8%;
     height: auto;
-  
-  
   }
-  
-  .mentions{
-    color:white;
-  font-size:13px;
-  font-weight:300
+
+  .mentions {
+    color: white;
+    font-size: 13px;
+    font-weight: 300;
   }
-  
+}
+
 .main-part {
-  display: flex;
+  @include flex-center;
   flex-wrap: wrap;
-  justify-content: center;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   padding: 40px 30px;
   border-radius: 25px;
   margin: 20px 50px;
-  gap:3.5%;
-  
+  gap: 3.5%;
 }
 
 .items-mainpart {
   flex-basis: 30%;
   height: 340px;
-  background-color: #FF6060;
-  padding: 20px; 
-  box-sizing: border-box; 
+  background-color: $primary-color;
+  padding: 20px;
+  box-sizing: border-box;
   border-radius: 7px;
   display: flex;
   align-items: flex-end;
   position: relative;
   margin-bottom: 3.5%;
+  object-fit: contain;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(#00000000, rgba(0, 0, 0, 0.5));
+    z-index: 1;
+    pointer-events: none;
+    border-radius: 7px;
+  }
 }
 
 .content-mainpart {
   text-align: left;
   padding: 0px;
   margin: 0px;
-  font-size: 15px;
-  color: white;
-  font-family: 'Montserrat';
-  font-weight: 300;
+  @include text-style(15px, white, 300);
   line-height: 1.5;
   z-index: 2;
   text-decoration: none;
-
 }
 
-
-.title-location{  
+.title-location {
   text-align: left;
   padding: 0px;
   margin: 0px;
-  font-size: 15px;
-  color: white;
-  font-family: 'Montserrat';
-  font-weight: 400;
+  @include text-style(15px, white, 400);
   line-height: 1.5;
   z-index: 2;
   text-decoration: none;
 }
+
 
 .items-mainpart::before {
   content: "";
@@ -201,28 +206,7 @@ footer{
 
 @media screen and (max-width: 768px) {
   /* Styles pour la version mobile */
-  .main-part {
-    display: grid;
-    grid-template-columns: 1fr; /* Un item par ligne sur mobile */
-    gap: 0;
-    padding: 0;
-    margin: 0;
-    background: #fff;
-  }
-
-  .items-mainpart {
-    flex-basis: 100%; /* Un item par ligne sur mobile */
-    margin: 20px 40px;
-    margin-bottom: 10px;
-    height: 300px;
-    background-color: #FF6060;
-    padding: 20px; /* Ajoutez un padding de 20px */
-    box-sizing: border-box; /* Inclure le padding dans la largeur et la hauteur */
-  }
-
-  .containImageBelow{
-    margin:0px;padding:15px 40px;
-  }
+ 
 
 }
 
@@ -242,14 +226,15 @@ a {
 }
 
 .linked-li{
-  color:#FF6060
+  color:#FF6060;
+  font-size:18px;
 }
 
 
 
 .slider-container {
 width:auto;
-  margin: 5px 50px;
+  margin: 0px 50px;
   
 }
 
@@ -257,18 +242,19 @@ width:auto;
   text-align: center;
 }
 
+
 .slider-item img {
 width:100%;
   height: 300px;
   border-radius: 20px;
 
   object-fit: cover;
+  background-position-x: center;
+  background-position-y: center;
+
 }
 
 
-.slick-arrow .slick-prev button{
- width:200px
-}
 
 .details{
   display: flex;
@@ -277,11 +263,11 @@ width:100%;
 
 
 .right-details{
-  width: 50%;
+  width: 30%;
   text-align: right;
 }
 .left-details{
-  width: 50%;
+  width: 70%;
 }
 
 .profile-pic{
@@ -291,6 +277,7 @@ width:100%;
   
 }
 
+
 .contain-namereview{
   display: flex;
   width:100%;
@@ -299,15 +286,14 @@ align-items: center; /* Ajout de l'alignement vertical au centre */
 }
 
 .left-details h1{
-  font-size:36px;
+  font-size:32px;
   text-align: left;
   color: #FF6060;
   margin:0px;
-  padding:0px;
   margin-bottom:10px;
   font-weight: 500;
   font-family: 'Montserrat';
-
+line-height: 1.2;
 }
 
 .left-details h2{
@@ -324,15 +310,15 @@ align-items: center; /* Ajout de l'alignement vertical au centre */
 
 }
 .contain-namereview h3{
-  margin-right:10px;
+  margin-right:20px;
   color: #FF6060;
 text-align: right;
 font-family: 'Montserrat';
-font-size: 18px;
+font-size: 20px;
 font-style: normal;
 font-weight: 500;
-line-height: 1.5
-;
+line-height: 1.5;
+margin-left:600px
 }
 
 
@@ -344,12 +330,14 @@ width: 196px;}
 
 .contain-btnfilters{
   text-align: left;
+  margin-top:15px;
+
 }
 
 .contain-btnfilters button{
   background-color: #FF6060;
   padding: 5px 30px;
-  border-radius: 6px;
+  border-radius: 13px;
   border:none;
   box-shadow: none;
   margin-right: 15px;
@@ -360,12 +348,13 @@ font-size: 14px;
 font-style: normal;
 font-weight: 500;
 margin-top:15px;
+
 }
 
 
 .contain-collapse-details {
   display: flex;
-  margin:0px 50px;
+  margin:10px 50px;
   gap:30px;
 }
 
@@ -376,6 +365,7 @@ margin-top:15px;
   overflow: hidden;
   position: relative; /* Add position relative to keep the expanding content within the container */
   margin-bottom: 20px;
+  height: fit-content;
 }
 
 .contain-collapse-details-about{
@@ -472,7 +462,7 @@ p {
   top:100;
   left:0;
   margin-left: 70px;
-
+opacity: 0.6;
 }
 
 .slider-next-icon {
@@ -480,6 +470,17 @@ p {
   top:0;
   right:0;
   margin-right: 70px;
+  opacity: 0.6;
+
+}
+
+.slider-prev-icon:hover{
+  opacity: 1;
+}
+
+.slider-next-icon:hover{
+  opacity: 1;
+
 }
 
 .show-more-button{
@@ -492,7 +493,7 @@ p {
   font-style: italic;
   font-weight: 500;
   cursor: pointer;
-  ;
+  background-color: #f6f6f6;
 }
 
 
@@ -501,12 +502,65 @@ p {
 
 }
 
+.stars-container{
+  margin-top:20px;
+margin-right:10px}
+
+.toggle-image{
+  width: 20px;
+  height: 13px;
+  margin-right: 10px;
+  margin-top: 5px;
+}
+
+.rotated {
+  transform: rotate(180deg);
+  transition: 0.2s ease-in-out;
+}
+
+.starz{
+  width: 30px;
+  margin:0px 2px
+}
+
+
 
 @media (max-width: 768px) {
+
+  .main-part {
+    display: grid;
+    grid-template-columns: 1fr; /* Un item par ligne sur mobile */
+    gap: 0;
+    padding: 0;
+    margin: 0;
+    background: #fff;
+    margin-top:20px
+  }
+
+  .items-mainpart {
+    flex-basis: 100%; /* Un item par ligne sur mobile */
+    margin: 20px 30px;
+    margin-bottom: 10px;
+    height: 300px;
+    background-color: #FF6060;
+    padding: 20px; /* Ajoutez un padding de 20px */
+    box-sizing: border-box; /* Inclure le padding dans la largeur et la hauteur */
+    border-radius: 20px;
+  }
+
+   .items-mainpart::before {    border-radius: 20px;
+   }
+
+  .containImageBelow{
+    margin:0px;padding:15px 40px;
+  }
+
   .slider-container img{
     width: 100%;
     height: 350px; /* Modifiez la hauteur selon vos besoins */
   }
+
+ 
 
 
 /* Modifier les marges et rembourrages des slides */
@@ -520,7 +574,9 @@ p {
 
   .logo-main{
     margin-top:10px;
-    width: 35%;
+    width: 200px;
+    padding:15px 0px;
+    height:auto
   
   }
 
@@ -553,7 +609,8 @@ p {
     }
 
     .left-details h1{
-      font-size:22px
+      font-size:30px;
+      line-height: 1.5;
     }
 
     .collapse-container{
@@ -575,7 +632,8 @@ p {
       width: 100%;
       display: flex;
       flex-direction: row-reverse;
-      margin-top:10px
+      margin-top:10px;
+      padding:20px 0px
     }
     .review-icons{
       margin-top:20px
@@ -599,7 +657,7 @@ display: block;
   margin:0px 30px;
 }
 .containImageBelow img{
-  height:300px;
+  height:200px;
 }
 
 .error400{
@@ -628,6 +686,62 @@ display: block;
   color:#FF6060;
   font-weight:500;
   text-decoration: underline;
+}
+
+.contain-namereview{
+  width: 50%;
+}
+
+.stars-container{
+  width: 50%;
+  text-align: left;
+}
+
+.slider-next-icon{
+  position: initial;
+  position: absolute;
+  width: 30px!important;
+  height: auto!important;
+  right:0px;
+  top:20px;
+  margin-right: 0px;
+
+}
+
+.slider-prev-icon{
+  position: initial;
+  position: absolute;
+  width: 30px!important;
+  height: auto!important;
+  left:0px;
+  margin-left: 0px;
+top:130px
+
+
+}
+
+.overlayText h1{
+  text-align: left;
+}
+
+.overlayText {
+  padding:20px
+}
+
+.overlay{
+  justify-content: left;
+}
+.show-more-button{
+  width:60%;
+  margin:auto;
+  justify-content: center;
+  margin-top: 20px;
+  background: white;
+}
+
+.imageFooter{
+  width: 25%;
+  margin-top:10px
 }
 }
 
