--- a/src/App.scss
+++ b/src/App.scss
@@ -180,11 +180,13 @@ footer {
   text-decoration: none;
 }
 
+
+
 .title-location {
   text-align: left;
   padding: 0px;
   margin: 0px;
-  @include text-style(15px, white, 400);
+  @include text-style(18px, white, 400);
   line-height: 1.5;
   z-index: 2;
   text-decoration: none;
@@ -574,7 +576,6 @@ margin-right:10px}
 
   .logo-main{
     margin-top:10px;
-    width: 200px;
     padding:15px 0px;
     height:auto
   
@@ -657,7 +658,7 @@ display: block;
   margin:0px 30px;
 }
 .containImageBelow img{
-  height:200px;
+  height:150px;
 }
 
 .error400{
@@ -722,6 +723,7 @@ top:130px
 
 .overlayText h1{
   text-align: left;
+  font-size:28px;
 }
 
 .overlayText {
@@ -749,3 +751,7 @@ top:130px
 
 
 
+.activelink{
+  text-decoration: underline!important;
+  text-underline-offset: 3px;
+}
